--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -6,19 +6,18 @@
     <div class="newsletterForm-wrapper">
       <!-- Begin MailChimp Signup Form -->
       <div id="mc_embed_signup">
-        <form action="{ get this from MailChimp }" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="//formspree.io/info@unitsystems.eu" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
           <div id="mc_embed_signup_scroll">
             <div class="mc-field-group">
-              <input type="email" value="" name="EMAIL" class="textInput textInput--large" id="mce-EMAIL" placeholder="Your email address">
+              <input type="email" value="" name="_replyto" class="textInput textInput--large" id="mce-EMAIL" placeholder="Your email address">
             </div>
             <div class="mc-field-group">
-              <textarea name="mce-BODY" id="mce-BODY" cols="30" rows="10" placeholder="Your Message..."></textarea>
+              <textarea name="message" id="mce-BODY" cols="30" rows="10" placeholder="Your Message..."></textarea>
             </div>
             <div id="mce-responses" class="clear">
               <div class="response" id="mce-error-response" style="display:none"></div>
               <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="{ get this from MailChimp }" tabindex="-1" value=""></div>
+            </div>
             <div class="clear u-alignCenter"><input type="submit" value="Send" name="subscribe" id="mc-embedded-subscribe" class="button button--primary"></div>
           </div>
         </form>
